# construction_bot

./: .env.example  .gitignore  Dockerfile  README.md  construction-bot-spec.md  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-07-21-mvp-phases-0-2.md
locales/: en.json  ru.json
migrations/: 0001_init.sql  0002_last_comment_id.sql  0003_auto_from.sql
prompts/: digest.txt
scripts/: force_report.py  smoke_bitrix.py
src/: config.py  db.py  i18n.py  main.py  repo.py
src/bitrix/: client.py  links.py  methods.py  parse.py
src/digest/: collector.py  llm.py  render.py  scheduler.py
src/telegram/: capture.py  commands.py  menu.py  send.py  tz_aliases.py
tests/: test_bitrix_client.py  test_capture.py  test_collector.py  test_commands.py  test_config.py  test_db.py  test_i18n.py  test_links.py  test_llm.py  test_menu.py  test_methods.py  test_parse.py  test_process_chat.py  test_render.py  test_repo.py  test_scheduler_logic.py  test_send.py  test_tz_aliases.py
tests/fixtures/: chat_messages.json  comments_page.json  history_page.json
