[project]
name = "construction-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "apscheduler>=3.10,<4",
    "openai>=1.40",
    "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["db: тесты, требующие Postgres (TEST_POSTGRES_DSN)"]
